# engnr-nsu-cpp-2021

./: .gitignore  .gitmodules
.github/functional-testing/resources/: tests_config.json
.github/functional-testing/resources/lab2/test_complex1/: file  reference-stdout.txt
.github/functional-testing/resources/lab2/test_complex2/: file  reference-stdout.txt
.github/functional-testing/resources/lab2/test_complex3/: file
.github/functional-testing/resources/lab2/test_desc-example/: file
.github/functional-testing/resources/lab2/test_empty-stack-error3/: file
.github/functional-testing/resources/lab2/test_empty-stack-error4/: file
.github/functional-testing/resources/lab2/test_simple/: file
1/: CMakeLists.txt  Hash.cpp  Hash.h  README.md  func.cpp  main.cpp  other.h
1/src/: main.cpp
1/src/hasher/: hasher.cpp  hasher.h
2/: AppException.cpp  AppException.h  CMakeLists.txt  Command.cpp  Command.h  CommandCreator.cpp  CommandCreator.h  Context.h  Helper.cpp  Helper.h  main.cpp
2/tests/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  run_tests  unit_tests.cpp
